--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.0.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
