리덕스, 레이어팝업 적용되지 않은 index 페이지 index 내에 모든 state를 관리하는 구조 추후 redux로 변환이 필요

--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "moment": "^2.19.1",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.0.0",
+    "react-addons-shallow-compare": "^15.6.2",
+    "react-dates": "^13.0.5",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.0.0",
