--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "react": "^16.0.0",
+    "react-dates": "^13.0.5",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-modal": "^3.0.0",
