--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "node-sass": "^4.5.3",
     "object-assign": "4.1.1",
