--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
+    "socket.io-client": "^2.0.3",
+    "socketio-jwt": "^4.5.0",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
