--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dates": "^13.0.5",
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
+    "react-highlight-words": "^0.10.0",
     "react-modal": "^3.0.0",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
